--- a/Verification_Level2RCT.Rmd
+++ b/Verification_Level2RCT.Rmd
@@ -25,6 +25,9 @@ configs <- yaml.load_file("configs.yaml")
 
 #set directory for reading in files
 fdir <- configs$fdir
+
+#set margin of error
+me <- 0.01  
 ```
 
 
@@ -215,46 +218,38 @@ Are these topics still relevant?
 
 ## Maybe different chunk for each design specification (e.g, constant, fixed, random effects)
 
-
+#Verify M=1 against PowerUp!
 ```{r verifyPowerUp}
 # for M=1, look up in Power-Up
-
-  #app to generate power can be found here https://metinbulus.shinyapps.io/powerupr/
-    #power from PowerUp! app: 0.1662404
 
 #extract power estimate using PowerUp! package
 powerUp<- power.bira2c1(es=.125, alpha=.05, two.tailed=TRUE, p=.50, g1=numCovar.1, r21=0, n=50, J=20)
 powerUp.M1 <- powerUp$power
 
-
-## Q FOR ZH/KP: What is the diff bt looking at indiv power and M=1?
-#run power with M=1 from our package  - DOESNT RUN
-#reset rho and sigma?
-power.M1 <- power.blockedRCT.2(M=1, MDES=MDES, Ai=1, J=J, n.j=n.j, p=p,                alpha=alpha, numCovar.1=numCovar.1, numCovar.2 = numCovar.2,                R2.1=R2.1, R2.2=R2.2, ICC=ICC, mod.type = mod.type, 
-               sigma = sigma,
-               rho = 0, omega = omega, tnum = tnum, snum = snum, ncl = ncl,
-               updateProgress = updateProgress)
-
-
-####OLD - SEE Q from above:
-
 #extract M=1 power from our methods
 power.M1 <- validtable[which(validtable$method_mtp =="rawp" & validtable$method_corr == "0"), "method_indiv"]
 power.M1 <- as.numeric(levels(power.M1))[power.M1]
   
-# create table of results and check for if within TBD margin of error
+#check if our power results are within the margin of error of the powerUp results
+powerUp$power < (power.M1 + me) & powerUp$power > (power.M1 - me)
+
+#look at the result and check for if within margin of error
 powerUpvalidtable <- cbind(powerUp.M1, power.M1)
 powerUpvalidtable
 
-# create table of run times
+
+#run power with M=1 from our package  - DOESNT RUN
+#power.M1 <- power.blockedRCT.2(M=1, MDES=MDES, Ai=1, J=J, n.j=n.j, p=p,                alpha=alpha, numCovar.1=numCovar.1, numCovar.2 = numCovar.2,                R2.1=R2.1, R2.2=R2.2, ICC=ICC, mod.type = mod.type, 
+#               sigma = sigma,
+#               rho = 0, omega = omega, tnum = tnum, snum = snum, ncl = ncl,
+#               updateProgress = updateProgress)
+
 
 ```
 
 # Verify MDES calculations and capture run times
 
 ```{r chunk4_verifyMDES}
-#set margin of error 
-me <- 0.01
 
 ####ASK ZH: Where is the rho (correlation) parameter for MDES calc? How do I switch out the correlation? Is it sigma?
   ##generate power for indiv, BH, corr = 0
