--- a/Verification_Level2RCT.Rmd
+++ b/Verification_Level2RCT.Rmd
@@ -90,40 +90,36 @@ tnum <- 10000
 snum <- 1000
 ncl <- 2
 updateProgress <- NULL
-sigma <- 0
+sigma <- 0 ## NOTE: sigma is a matrix of row currently (line 232 on pump repo)
 
-#generate matrices
 
-## NOTE: sigma is a matrix of row currently (line 232 on pump repo)
+#generate power calculations for different correlations
 
-#corr = 0
-power.corr0 <- power.blockedRCT.2(M=M, MDES=MDES, Ai=Ai, J=J, n.j=n.j, p=p,                alpha=alpha, numCovar.1=numCovar.1, numCovar.2 = numCovar.2,                R2.1=R2.1, R2.2=R2.2, ICC=ICC, mod.type = mod.type, 
+gen.powerobj <- function(corr){
+
+power.blockedRCT.2(M=M, MDES=MDES, Ai=Ai, J=J, n.j=n.j, p=p,                alpha=alpha, numCovar.1=numCovar.1, numCovar.2 = numCovar.2, R2.1=R2.1,     R2.2=R2.2, ICC=ICC, mod.type = mod.type, 
                sigma = sigma,
-               rho = 0, omega = omega, tnum = tnum, snum = snum, ncl = ncl,
+               rho = corr, omega = omega, tnum = tnum, snum = snum, ncl = ncl,
                updateProgress = updateProgress)
+}
 
-#corr = 0.2
-power.corr0.2 <- power.blockedRCT.2(M=M, MDES=MDES, Ai=Ai, J=J, n.j=n.j,                    p=p, alpha=alpha, numCovar.1=numCovar.1, 
-                 numCovar.2 = numCovar.2,R2.1=R2.1, R2.2=R2.2, ICC=ICC,                     mod.type = mod.type, 
-                 sigma = sigma,
-                 rho = 0.2, omega = omega, tnum = tnum, snum = snum, 
-                 ncl = ncl, updateProgress = updateProgress)
+power.corr0 <- gen.powerobj(0)
+power.corr0.2 <- gen.powerobj(0.2)
+power.corr0.5 <- gen.powerobj(0.5)
+power.corr0.8 <- gen.powerobj(0.8)
 
 
-#corr = 0.5
-power.corr0.5 <- power.blockedRCT.2(M=M, MDES=MDES, Ai=Ai, J=J, n.j=n.j,                    p=p, alpha=alpha, numCovar.1=numCovar.1, 
-                 numCovar.2 = numCovar.2,R2.1=R2.1, R2.2=R2.2, ICC=ICC,                     mod.type = mod.type, 
-                 sigma = sigma,
-                 rho = 0.5, omega = omega, tnum = tnum, snum = snum, 
-                 ncl = ncl, updateProgress = updateProgress)
+
+#can further functionalize - wrap function call in loop
+#objn <- c("power.corr0", "power.corr0.2", "power.corr0.5", "power.corr0.8")
+          
+#for c in corrlist {
+#  power.corr0 <- gen.powerobj(c)
   
+#}    
 
-#corr = 0.8
-power.corr0.8 <- power.blockedRCT.2(M=M, MDES=MDES, Ai=Ai, J=J, n.j=n.j,                    p=p, alpha=alpha, numCovar.1=numCovar.1, 
-                 numCovar.2 = numCovar.2,R2.1=R2.1, R2.2=R2.2, ICC=ICC,                     mod.type = mod.type, 
-                 sigma = sigma,
-                 rho = 0.8, omega = omega, tnum = tnum, snum = snum, 
-                 ncl = ncl, updateProgress = updateProgress)
+
+
   
 #add data frames to a list to process it altogether
 list_of_power <- list(power.corr0, power.corr0.2, power.corr0.5, power.corr0.8)
