--- a/Verification_Level2RCT.Rmd
+++ b/Verification_Level2RCT.Rmd
@@ -264,6 +264,23 @@ test.MDES <- MDES.blockedRCT.2(M = M, numFalse = M, Ai_mdes = M, J = J, n.j = n.
 
 test.MDES[1] < (MDES + me) & test.MDES[1] > (MDES - me)
 
+
+#set up a function to automate some of this- under construction
+MDEStest <- function(powerds, mtpn, defn){
+  
+  test.MDES <- MDES.blockedRCT.2(M = M, numFalse = M, Ai_mdes = M, J = J, n.j = n.j, power = power.corr0["HO", "min1"], power.definition = "min1", MTP = "HO", marginError = 0.05, p = p, alpha = 0.05, numCovar.1 = numCovar.1, numCovar.2 = numCovar.2, R2.1 = R2.1, R2.2 = R2.2, ICC = ICC, mod.type = mod.type, omega = omega,tnum = tnum, snum = snum, ncl = ncl, updateProgress = updateProgress)
+
+test.MDES[1] < (MDES + me) & test.MDES[1] > (MDES - me)
+  
+  
+  
+} 
+
+
+
+
+
+
 ```
 
 # Verify sample size calculations and capture run times
