--- a/Verification_Level2RCT.Rmd
+++ b/Verification_Level2RCT.Rmd
@@ -253,7 +253,7 @@ powerUpvalidtable
 
 ## cor = 0
 #indiv, BH
-test.MDES <- MDES.blockedRCT.2(M = M, numFalse = M, Ai_mdes = M, J = J, n.j = n.j, power = power.corr0["BH", "indiv"], power.definition = "indiv", MTP = "BH", marginError = 0.05, p = p, alpha = 0.05, numCovar.1 = numCovar.1, numCovar.2 = numCovar.2, R2.1 = R2.1, R2.2 = R2.2, ICC = ICC, mod.type = mod.type, sigma = sigma, rho=0, omega = omega,tnum = tnum, snum = snum, ncl = ncl, updateProgress = updateProgress)
+test.MDES <- MDES.blockedRCT.2(M = M, numFalse = M, Ai_mdes = M, J = J, n.j = n.j, power = power.corr0["rawp", "indiv"], power.definition = "indiv", MTP = "BH", marginError = 0.05, p = p, alpha = 0.05, numCovar.1 = numCovar.1, numCovar.2 = numCovar.2, R2.1 = R2.1, R2.2 = R2.2, ICC = ICC, mod.type = mod.type, sigma = sigma, rho=0, omega = omega,tnum = tnum, snum = snum, ncl = ncl, updateProgress = updateProgress)
 
 test.MDES[1] < (MDES + me) & test.MDES[1] > (MDES - me)
 
@@ -266,28 +266,37 @@ test.MDES[1] < (MDES + me) & test.MDES[1] > (MDES - me)
 
 
 #set up a function to automate some of this- under construction
-MDEStest <- function(powerds, mtpn, defn, corr){
-  
-test.MDES <- MDES.blockedRCT.2(M = M, numFalse = M, Ai_mdes = M, J = J, n.j = n.j, power = power.corr0[mtpn, defn], power.definition = defn, MTP = mtpn, marginError = 0.05, p = p, alpha = 0.05, numCovar.1 = numCovar.1, numCovar.2 = numCovar.2, R2.1 = R2.1, R2.2 = R2.2, ICC = ICC, mod.type = mod.type, sigma = sigma, rho=corr, omega = omega,tnum = tnum, snum = snum, ncl = ncl, updateProgress = updateProgress)
+holder <- NULL
 
-test.MDES[1] < (MDES + me) & test.MDES[1] > (MDES - me)
+MDEStest <- function(powerds, corr){
+       
+      res <- list()
+      res$no_error <- TRUE
+      res$error <- list()
+      
+      idx <- 1
+      for(i in rownames(powerds)){
+        for(j in colnames(powerds)){
+          test.MDES <- MDES.blockedRCT.2(M = M, numFalse = M, Ai_mdes = M, J = J, n.j = n.j, power = powerds[i, j], power.definition = j, MTP = i, marginError = 0.05, p = p, alpha = 0.05, numCovar.1 = numCovar.1, numCovar.2 = numCovar.2, R2.1 = R2.1, R2.2 = R2.2, ICC = ICC, mod.type = mod.type, sigma = sigma, rho=corr, omega = omega,tnum = tnum, snum = snum, ncl = ncl, updateProgress = updateProgress)
+          if((test.MDES[1] < (MDES + me) & test.MDES[1] > (MDES - me) ) == FALSE){
+            
+            res$no_error <- FALSE
+            error_index <- paste(i, ",", j)
+            res$error[[idx]] <- error_index
+            #print(j)
+            print(paste("lower bound: ", MDES - me, "  upper bound: ", MDES + me, "  true value: ", powerds[i,j], "  indices: ", error_index, sep = ""))
+           #print((MDES - me))
+           # print(power.corr0[i,j])
+           # print(MDES + me)
+            idx <- idx + 1
+          }
+        }
+      }
+      
+      return(res)
 } 
 
-testmd <- MDEStest(power.corr0, "BH", "indiv", 0)
-
-error <- FALSE
-for(i in 1:nrow(power.corr0)){
-  for(j in 1:ncol(power.corr0)){
-    if((power.corr0[i,j] < (MDES + me) & power.corr0[i,j] > (MDES - me) ) == FALSE){
-      error <- TRUE
-      print(paste(i, ",", j))
-      #print(j)
-     # print((MDES - me))
-     # print(power.corr0[i,j])
-     # print(MDES + me)
-    }
-  }
-}
+testmd <- MDEStest(power.corr0, 0)
 
 
 
