--- a/Verification_Level2RCT.Rmd
+++ b/Verification_Level2RCT.Rmd
@@ -246,57 +246,60 @@ powerUpvalidtable
 # Verify MDES calculations and capture run times
 
 ```{r chunk4_verifyMDES}
-
-####ASK ZH: Where is the rho (correlation) parameter for MDES calc? How do I switch out the correlation? Is it sigma?
-  ##generate power for indiv, BH, corr = 0
-  ## is numFalse the same as Ai?
-
-## cor = 0
-#indiv, BH
-test.MDES <- MDES.blockedRCT.2(M = M, numFalse = M, Ai_mdes = M, J = J, n.j = n.j, power = power.corr0["rawp", "indiv"], power.definition = "indiv", MTP = "BH", marginError = 0.05, p = p, alpha = 0.05, numCovar.1 = numCovar.1, numCovar.2 = numCovar.2, R2.1 = R2.1, R2.2 = R2.2, ICC = ICC, mod.type = mod.type, sigma = sigma, rho=0, omega = omega,tnum = tnum, snum = snum, ncl = ncl, updateProgress = updateProgress)
-
-test.MDES[1] < (MDES + me) & test.MDES[1] > (MDES - me)
-
-
-##ASK ZH: What are the categories for diff power.definition?
-#min1, HO
-test.MDES <- MDES.blockedRCT.2(M = M, numFalse = M, Ai_mdes = M, J = J, n.j = n.j, power = power.corr0["HO", "min1"], power.definition = "min1", MTP = "HO", marginError = 0.05, p = p, alpha = 0.05, numCovar.1 = numCovar.1, numCovar.2 = numCovar.2, R2.1 = R2.1, R2.2 = R2.2, ICC = ICC, mod.type = mod.type, omega = omega,tnum = tnum, snum = snum, ncl = ncl, updateProgress = updateProgress)
-
-test.MDES[1] < (MDES + me) & test.MDES[1] > (MDES - me)
-
-
 #set up a function to automate some of this- under construction
-holder <- NULL
+MDEStest <- function(powerds, mtpn, defn, corr){
+  
+  test.MDES <- MDES.blockedRCT.2(M = M, numFalse = M, Ai_mdes = M, J = J, n.j = n.j, power = powerds[mtpn, defn], power.definition = defn, MTP = mtpn, marginError = 0.05, p = p, alpha = 0.05, numCovar.1 = numCovar.1, numCovar.2 = numCovar.2, R2.1 = R2.1, R2.2 = R2.2, ICC = ICC, mod.type = mod.type, sigma = sigma, rho=corr, omega = omega,tnum = tnum, snum = snum, ncl = ncl, updateProgress = updateProgress)
 
-MDEStest <- function(powerds, corr){
+  
+ bool <- test.MDES[1] < (MDES + me) & test.MDES[1] > (MDES - me)
+ return(c(bool, test.MDES))
+}
+
+MDEStest(power.corr0, "BH", "indiv", 0)
+MDEStest(power.corr0, "BH", "min1", 0)
+MDEStest(power.corr0, "BF", "min1", 0)
+MDEStest(power.corr0, "HO", "min1", 0)
+
+MDEStest(power.corr0, "BH", "min4", 0)
+MDEStest(power.corr0, "BF", "min4", 0)
+
+
+
+
+
+
+#for Domino, calculate MDES for all power calc and check if it is within range
+#holder <- NULL
+#MDEStest <- function(powerds, corr){
        
-      res <- list()
-      res$no_error <- TRUE
-      res$error <- list()
+#      res <- list()
+#      res$no_error <- TRUE
+#      res$error <- list()
       
-      idx <- 1
-      for(i in rownames(powerds)){
-        for(j in colnames(powerds)){
-          test.MDES <- MDES.blockedRCT.2(M = M, numFalse = M, Ai_mdes = M, J = J, n.j = n.j, power = powerds[i, j], power.definition = j, MTP = i, marginError = 0.05, p = p, alpha = 0.05, numCovar.1 = numCovar.1, numCovar.2 = numCovar.2, R2.1 = R2.1, R2.2 = R2.2, ICC = ICC, mod.type = mod.type, sigma = sigma, rho=corr, omega = omega,tnum = tnum, snum = snum, ncl = ncl, updateProgress = updateProgress)
-          if((test.MDES[1] < (MDES + me) & test.MDES[1] > (MDES - me) ) == FALSE){
+#      idx <- 1
+#      for(i in rownames(powerds)){
+#        for(j in colnames(powerds)){
+#          test.MDES <- MDES.blockedRCT.2(M = M, numFalse = M, Ai_mdes = M, J = J, n.j = n.j, power = powerds[i, j], power.definition = j, MTP = i, marginError = 0.05, p = p, alpha = 0.05, numCovar.1 = numCovar.1, numCovar.2 = numCovar.2, R2.1 = R2.1, R2.2 = R2.2, ICC = ICC, mod.type = mod.type, sigma = sigma, rho=corr, omega = omega,tnum = tnum, snum = snum, ncl = ncl, updateProgress = updateProgress)
+#          if((test.MDES[1] < (MDES + me) & test.MDES[1] > (MDES - me) ) == FALSE){
             
-            res$no_error <- FALSE
-            error_index <- paste(i, ",", j)
-            res$error[[idx]] <- error_index
+#            res$no_error <- FALSE
+#            error_index <- paste(i, ",", j)
+#            res$error[[idx]] <- error_index
             #print(j)
-            print(paste("lower bound: ", MDES - me, "  upper bound: ", MDES + me, "  true value: ", powerds[i,j], "  indices: ", error_index, sep = ""))
+#            print(paste("lower bound: ", MDES - me, "  upper bound: ", MDES + me, "  true value: ", powerds[i,j], "  indices: ", error_index, sep = ""))
            #print((MDES - me))
            # print(power.corr0[i,j])
            # print(MDES + me)
-            idx <- idx + 1
-          }
-        }
-      }
+#            idx <- idx + 1
+#          }
+#        }
+#      }
       
-      return(res)
-} 
+#      return(res)
+#} 
 
-testmd <- MDEStest(power.corr0, 0)
+#testmd <- MDEStest(power.corr0, 0)
 
 
 
@@ -309,6 +312,17 @@ testmd <- MDEStest(power.corr0, 0)
 # Verify sample size calculations and capture run times
 
 ```{r chunk4_verifySampleSize}
+SStest <- function(powerds, mtpn, defn){
+  
+  test.SS <- SS.blockedRCT.2(M, numFalse = M, J, n.j=NULL, J0=J0, n.j0=n.j0, MDES = MDES, power=powerds[mtpn,defn], power.definition = defn, MTP = mtpn, marginError = 0.005,p, alpha, numCovar.1=0, numCovar.2=0, R2.1=r2, R2.2=0, ICC=0, mod.type="constant", sigma=sigma, omega=NULL,  tnum = 10000, snum=2, ncl=4)
+  
+  print(test.SS)
+
+}
+
+SStest(power.corr0, "BH", "indiv")
+
+
 
 # Specify power estimates that match those obtained in chunk3_verifyPower (grab from final table/matrix) and corresponding MDES - and check that returned sample size is correct
 
