--- a/Verification_Level2RCT.Rmd
+++ b/Verification_Level2RCT.Rmd
@@ -17,8 +17,9 @@ library(yaml)
 library(knitr)
 library(kableExtra)
 library(PowerUpR)
-library(pum)
+#library(pum)
 library(plyr)
+source(file = "../Power-Under-Multiplicity/blockrct2_power.R")
 
 #read in configs file
 configs <- yaml.load_file("configs.yaml")
@@ -87,14 +88,13 @@ ICC <- 0
 mod.type <- 'c'
 omega <- 0
 tnum <- 10000
-snum <- 1000
+snum <- 2000
 ncl <- 2
 updateProgress <- NULL
 sigma <- 0 ## NOTE: sigma is a matrix of row currently (line 232 on pump repo)
 
 
 #generate power calculations for different correlations
-
 gen.powerobj <- function(corr){
 
 power.blockedRCT.2(M=M, MDES=MDES, Ai=Ai, J=J, n.j=n.j, p=p,                alpha=alpha, numCovar.1=numCovar.1, numCovar.2 = numCovar.2, R2.1=R2.1,     R2.2=R2.2, ICC=ICC, mod.type = mod.type, 
@@ -107,6 +107,26 @@ power.corr0 <- gen.powerobj(0)
 power.corr0.2 <- gen.powerobj(0.2)
 power.corr0.5 <- gen.powerobj(0.5)
 power.corr0.8 <- gen.powerobj(0.8)
+
+#save these files 
+save(power.corr0, power.corr0.2, power.corr0.5, power.corr0.8, file = "power_corr_ds.RData")
+
+power_corr_ds<- load("power_corr_ds.RData")
+
+
+write.table(power.corr0, "power_corr0.csv", row.names=FALSE, col.names = TRUE)
+t0<- read.table("power_corr0.csv")
+
+
+saveRDS(power.corr0, "power_corr0.rds")
+saveRDS(power.corr0.2, file = "power_corr02.rds")
+saveRDS(power.corr0.5, file = "power_corr05.rds")
+saveRDS(power.corr0.8, file = "power_corr08.rds")
+
+power.corr0.m<- load("power_corr0.rds")
+power.corr0.2.m<- load("power_corr02.rda")
+power.corr0.5.m<- load("power_corr05.rda")
+power.corr0.8<- load("power_corr08.rda")
 
 
 
@@ -219,7 +239,7 @@ Are these topics still relevant?
 # for M=1, look up in Power-Up
 
 #extract power estimate using PowerUp! package
-powerUp<- power.bira2c1(es=.125, alpha=.05, two.tailed=TRUE, p=.50, g1=numCovar.1, r21=0, n=50, J=20)
+powerUp<- power.bira2c1(es=.125, alpha=.05, two.tailed=TRUE, p=.50, g1=numCovar.1, r21=0, n=100, J=20)
 powerUp.M1 <- powerUp$power
 
 #extract M=1 power from our methods
@@ -237,8 +257,8 @@ powerUpvalidtable
 #run power with M=1 from our package  - DOESNT RUN
 #power.M1 <- power.blockedRCT.2(M=1, MDES=MDES, Ai=1, J=J, n.j=n.j, p=p,                alpha=alpha, numCovar.1=numCovar.1, numCovar.2 = numCovar.2,                R2.1=R2.1, R2.2=R2.2, ICC=ICC, mod.type = mod.type, 
 #               sigma = sigma,
-#               rho = 0, omega = omega, tnum = tnum, snum = snum, ncl = ncl,
-#               updateProgress = updateProgress)
+ #              rho = 0, omega = omega, tnum = tnum, snum = snum, ncl = ncl,
+ #              updateProgress = updateProgress)
 
 
 ```
