--- a/Verification_Level2RCT_DC.Rmd
+++ b/Verification_Level2RCT_DC.Rmd
@@ -117,8 +117,7 @@ sigma <- 0 ## NOTE: sigma is a matrix of row currently (line 232 on pump repo)
 #export(power.corr0.8, "power_corr08.rds")
 
 #import files
-
-power.corr0<- import("I:\\Multiplicity\\git\\power_corr0.rds")
+power.corr0  <- import("I:\\Multiplicity\\git\\power_corr0.rds")
 power.corr0.2<- import("I:\\Multiplicity\\git\\power_corr02.rds")
 power.corr0.5<- import("I:\\Multiplicity\\git\\power_corr05.rds")
 power.corr0.8<- import("I:\\Multiplicity\\git\\power_corr08.rds")
@@ -261,21 +260,21 @@ powerUpvalidtable
 MDEStest <- function(powerds, mtpn, defn, corr){
   
   test.MDES <- MDES.blockedRCT.2(M = M, numFalse = M, Ai_mdes = M, J = J, n.j = n.j, power = powerds[mtpn, defn], power.definition = defn, MTP = mtpn, marginError = 0.05, p = p, alpha = 0.05, numCovar.1 = numCovar.1, numCovar.2 = numCovar.2, R2.1 = R2.1, R2.2 = R2.2, ICC = ICC, mod.type = mod.type, sigma = sigma, rho=corr, omega = omega,tnum = tnum, snum = snum, ncl = ncl, updateProgress = updateProgress)
-
+ 
+ print(test.MDES)
   
  bool <- test.MDES[1] < (MDES + me) & test.MDES[1] > (MDES - me)
- return(c(bool, test.MDES))
+ return(list(bool, test.MDES))
 }
 
 MDEStest(power.corr0, "BH", "indiv", 0) #TRUE
-MDEStest(power.corr0, "HO", "indiv", 0) #Taking a very long time
-MDEStest(power.corr0, "BF", "indiv", 0) 
+MDEStest(power.corr0, "HO", "indiv", 0) #FALSE
+MDEStest(power.corr0, "BF", "indiv", 0) #Verification template format is off. 
 
-MDEStest(power.corr0, "BH", "min1", 0)  #FALSE
-MDEStest(power.corr0, "BF", "min1", 0)  #BF working
+
+MDEStest(power.corr0, "BH", "min1", 0) #FALSE
+MDEStest(power.corr0, "BF", "min1", 0)
 MDEStest(power.corr0, "HO", "min1", 0)
-
-
 
 MDEStest(power.corr0, "BH", "min4", 0)
 MDEStest(power.corr0, "BF", "min4", 0)
