--- a/Verification_Level2RCT.Rmd
+++ b/Verification_Level2RCT.Rmd
@@ -20,7 +20,7 @@ library(PowerUpR)
 library(pum)
 library(plyr)
 library(rio)
-#source(file = "../Power-Under-Multiplicity/blockrct2_power.R")
+source(file = "blockrct2_power.R")
 
 #read in configs file
 configs <- yaml.load_file("configs.yaml")
@@ -260,7 +260,7 @@ powerUpvalidtable
 #set up a function to automate some of this- under construction
 MDEStest <- function(powerds, mtpn, defn, corr){
   
-  test.MDES <- MDES.blockedRCT.2(M = M, numFalse = M, Ai_mdes = M, J = J, n.j = n.j, power = powerds[mtpn, defn], power.definition = defn, MTP = mtpn, marginError = 0.05, p = p, alpha = 0.05, numCovar.1 = numCovar.1, numCovar.2 = numCovar.2, R2.1 = R2.1, R2.2 = R2.2, ICC = ICC, mod.type = mod.type, sigma = sigma, rho=corr, omega = omega,tnum = tnum, snum = snum, ncl = ncl, updateProgress = updateProgress)
+  test.MDES <- MDES.blockedRCT.2(M = M, numFalse = M, Ai_mdes = M, J = J, n.j = n.j, power = powerds[mtpn, defn], power.definition = defn, MTP = mtpn, marginError = 0.05, p = p, alpha = 0.05, numCovar.1 = numCovar.1, numCovar.2 = numCovar.2, R2.1 = R2.1, R2.2 = R2.2, ICC = ICC, mod.type = mod.type, sigma = sigma, rho = corr, omega = omega,tnum = tnum, snum = snum, ncl = ncl, updateProgress = updateProgress)
 
   
  bool <- test.MDES[1] < (MDES + me) & test.MDES[1] > (MDES - me)
