--- a/profile_test.Rmd
+++ b/profile_test.Rmd
@@ -7,9 +7,9 @@ output: pdf_document
 ## Loading the blockrct2_power.R file
 
 ```{r}
-source("blockrct2_power.R")
+#source("Methods/blockrct2_power.R")
 #library(pum)
-#source("blockrct2_power_rcpp.R")
+source("Rcpp/blockrct2_power_rcpp.R")
 ```
 ## Parameters for testing power function en masse
 
@@ -64,12 +64,12 @@ The majority of the time is spent on apply function using multtest's built in fu
 **Test cases have been modified to include both the original R flavor of the power function and the Rcpp flavor of the power function.**
 
 ```{r}
-source("blockrct2_power.R")
-power.blockedRCT.2(M = 5, MDES = 0.125, Ai = 3 , J = 10 , n.j = 10, R2.1 = 0.5 , p = 0.5 , alpha = 0.05 , numCovar.1 = 5 , numCovar.2 = NULL, ICC = NULL, tnum = 10000, snum = 10, updateProgress = NULL)
+#source("blockrct2_power.R")
+#power.blockedRCT.2(M = 5, MDES = 0.125, Ai = 3 , J = 10 , n.j = 10, R2.1 = 0.5 , p = 0.5 , alpha = #0.05 , numCovar.1 = 5 , numCovar.2 = NULL, ICC = NULL, tnum = 10000, snum = 10, updateProgress = NULL)
 ```
 
 ```{r}
-source("blockrct2_power_rcpp.R")
+#source("blockrct2_power_rcpp.R")
 power.blockedRCT.2(M = 5, MDES = 0.125, Ai = 3 , J = 10 , n.j = 10, R2.1 = 0.5 , p = 0.5 , alpha = 0.05 , numCovar.1 = 5 , numCovar.2 = NULL, ICC = NULL, tnum = 10000, snum = 10, updateProgress = NULL)
 ```
 
